CSS AND HTML FINISHED

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <!-- Demo content -->
     <section class="hero">
-      <h1>Example Student's Portfolio</h1>
-      <a href="#about-me">Learn More</a>
+      <h1>ISMAH'S Portfolio</h1>
+      <a href="#about-me">Learn more about me!</a>
     </section>
     <main>
       <section class="info" id="about-me">
