--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <title>Example Student's Portfolio</title>
     <link rel="stylesheet" href="./style/hero.css" />
     <link rel="stylesheet" href="./style/main.css" />
-  </head>
+    <!-- Google Font Links -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Federo&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"
+/>
+     
   <body>
     <!-- Demo content -->
     <section class="hero">
@@ -26,15 +31,11 @@
       <section id="cyoa">
         <h2>My Choose-Your-Own Adventure Project</h2>
         <p>
-          Fix me... you can add a link to your CYOA project and some text about
-          it here.
         </p>
       </section>
       <section id="bc">
         <h2>My Business Card Project</h2>
         <p>
-          Fix me... you can add a link to your Business Card project and some
-          text about it here.
         </p>
       </section>
       <section id="attribution">
