Portfoilio is now up to date

--- a/index.html
+++ b/index.html
@@ -21,22 +21,27 @@
         <div class="about-me">
           <h2>About Me</h2>
           <p>
-            Lorem ipsum fill in some text here about yourself... I'm just going
-            to write enough filler text here so that we can see text-wrapping in
-            action so we can make sure our paragraph text looks good in
-            paragraphs.
+            Hello viewers! My name is Ismah Sengendo. I'm a junior in highschool,
+            and this is my first year doing web design. I've had experience
+            with softwares like Adobe Illustrator, Adobe Photoshop, and Adobe In-design 
+            but, understanding the foundation of these softwares--coding--is a very cool 
+            skill to learn and grow with.
           </p>
         </div>
       </section>
       <section id="cyoa">
         <h2>My Choose-Your-Own Adventure Project</h2>
-        <p>
+        <p> <a href="https://iacs-cs.github.io/choose-your-own-adventure-Ismah2009/
+">Choose-Your-Own Adventure Project Link</a>
         </p>
+    <p>The purpose of this project is to create an 8-page “Choose Your Own Adventure” website that demonstrates my understanding of HTML structure, navigation, and storytelling. The objective is to use correct file organization and include required elements such as paragraph tags, headings, inline formatting tags, at least one image, and a properly formatted list. The site must be coherent, entertaining, easy to navigate, logically organized, and the code should be clean and commented where ideas or code were borrowed.</p>
       </section>
       <section id="bc">
         <h2>My Business Card Project</h2>
-        <p>
+        <p> <a href="https://iacs-cs.github.io/business-card-project-ismah-s-group/
+">Business Card Project Link</a>
         </p>
+        <p>The primary purpose of this project is to demonstrate mastery of fundamental CSS layout techniques by creating two distinct business cards. One using only Box Model properties and the other using Flexbox; while also applying key design principles such as Contrast, Repetition, Alignment, and Proximity.</p>
       </section>
       <section id="attribution">
         <h2>Sources &amp; Attribution</h2>
