HTML MAIN COMPLETED

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             and this is my first year doing web design. I've had experience
             with softwares like Adobe Illustrator, Adobe Photoshop, and Adobe In-design 
             but, understanding the foundation of these softwares--coding--is a very cool 
-            skill to learn and grow with.
+            skill to learn and grow with. This is probobly the first time you've 
+            seen a portfolio with the color palette of lime, gold, and black! It's just sooo me.
           </p>
         </div>
       </section>
@@ -41,8 +42,26 @@
         <p> <a href="https://iacs-cs.github.io/business-card-project-ismah-s-group/
 ">Business Card Project Link</a>
         </p>
-        <p>The primary purpose of this project is to demonstrate mastery of fundamental CSS layout techniques by creating two distinct business cards. One using only Box Model properties and the other using Flexbox; while also applying key design principles such as Contrast, Repetition, Alignment, and Proximity.</p>
+        <p>The purpose of this project is to demonstrate mastery of fundamental CSS layout techniques by creating two distinct business cards. One using only Box Model properties and the other using Flexbox; while also applying key design principles such as Contrast, Repetition, Alignment, and Proximity.</p>
       </section>
+      <section id="zg">
+        <h2>My CSS Zen Garden Project</h2>
+        <p> <a href="https://iacs-zen-garden.netlify.app/#ismah2009">CSS Zen Garden Project Link</a>
+</p>
+<p>The purpose of this project is to demonstrate the power and flexibility of CSS by transforming a fixed HTML structure into a visually unique and engaging design using only a custom stylesheet. This project highlights my ability to apply advanced CSS techniques; such as layout systems, typography, color theory, and responsiveness; while following core design principles including Contrast, Repetition, Alignment, and Proximity. Multiple designs showcase different layout approaches and creative experimentation, emphasizing how CSS alone can significantly change the look and feel of a webpage.</p>
+      </section>
+       <section id="id">
+<h2>My Interactive Design Project</h2>
+<p> <a href="https://ismah2009.github.io/interactive-design-ismah/">Interactive Design Project Link</a>
+</p>
+<p>The purpose of this project is to demonstrate the integration of visual design and user interaction by creating a single-page, interactive explainer website using HTML, CSS, and vanilla JavaScript. The project focuses on guiding users through information using reveals, content changes, and visual feedback, while applying core design principles such as Contrast, Repetition, Alignment, and Proximity. Through interactive elements and thoughtful layout choices, this project highlights how motion and user input can enhance understanding and engagement.</p>
+       </section>
+      <section id="di">
+<h2>My Design Improvement Project</h2>
+<p> <a href="https://iacs-cs.github.io/design-improvement-project-Ismah2009/">Design Improvement Project Link</a>
+  </p>
+  <p>The purpose of this project is to demonstrate the application of core graphic and web design principles by analyzing an existing design and recreating it with intentional improvements using HTML and CSS. The project focuses on identifying visual flaws and enhancing hierarchy, readability, and cohesion through effective use of Contrast, Repetition, Alignment, and Proximity, as well as thoughtful color and typography choices.</p>
+       </section>
       <section id="attribution">
         <h2>Sources &amp; Attribution</h2>
         <p>
