--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
   <body>
     <!-- Demo content -->
     <section class="hero">
-      <h1>ISMAH'S Portfolio</h1>
+      <!-- This code was generated with help from Github Copilot in response to the prompt "Add decorative image on both sides of the h1 evenly" - 01/13/2026 -->
+      <div class="hero-header">
+        <img src="./download (2).png" alt="decorative" class="hero-badge" />
+        <h1>ISMAH'S Portfolio</h1>
+        <img src="./download (2).png" alt="decorative" class="hero-badge" />
+      </div>
       <a href="#about-me">Learn more about me!</a>
-    </section>
+    </section> 
     <main>
       <section class="info" id="about-me">
         <div class="about-me">
