--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <main>
       <section class="info" id="about-me">
         <div class="about-me">
+
+          <div id="falling-sky" aria-hidden="true"></div>
+          
           <h2>About Me</h2>
           <p>
             Hello viewers! My name is Ismah Sengendo. I'm a junior in highschool,
