--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             and this is my first year doing web design. I've had experience
             with softwares like Adobe Illustrator, Adobe Photoshop, and Adobe In-design 
             but, understanding the foundation of these softwares--coding--is a very cool 
-            skill to learn and grow with. This is probobly the first time you've 
-            seen a portfolio with the color palette of lime, gold, and black! It's just sooo me.
+            skill to learn and grow with.
           </p>
         </div>
       </section>
@@ -73,15 +72,16 @@
       <section id="attribution">
         <h2>Sources &amp; Attribution</h2>
         <p>
-          Fix me... you can add a list of sources you used to create your
-          portfolio here. Be sure to acknowledge any images, fonts, or other
-          media you used that you did not create yourself.
+          
         </p>
         <p>
-          In addition, remember if you use AI to help (including Copilot), you
-          must acknowledge it here with a description of how you used AI &mdash;
-          you can list tasks AI helped you with, and you should also include
-          notes <em>in your source code</em> describing any AI-generated code.
+          <ul>
+            <li>Linked from Google Fonts: "Federo" and "Tourney"</li>
+            <li>I used Github Copilot to help me add the downloaded image on both sides of the h1 in the hero section. Using the prompt: "Add the decorative image on both sides of the h1 evenly."</li>
+            <li>I used Github Copilot to help make the images bigger and more centered on both sides. Using the prompt: "Make the images bigger and more centered on both sides."</li>
+            <li>I used ChatGPT to help me with adding falling gold and rocks from the sky. Using the prompt: "Using JavaScript, add continous falling gold and rocks from the top of the site."</li>
+            
+          </ul>
         </p>
       </section>
     </main>
