--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <p>
           <ul>
             <li>Linked from Google Fonts: "Federo" and "Tourney"</li>
+            <li>Decorative image downloaded from: <a href="https://www.metmuseum.org/hubs/open-access">https://www.metmuseum.org/hubs/open-access</a> THE MET MUSEUM</li>
             <li>I used Github Copilot to help me add the downloaded image on both sides of the h1 in the hero section. Using the prompt: "Add the decorative image on both sides of the h1 evenly."</li>
             <li>I used Github Copilot to help make the images bigger and more centered on both sides. Using the prompt: "Make the images bigger and more centered on both sides."</li>
             <li>I used ChatGPT to help me with adding falling gold and rocks from the sky. Using the prompt: "Using JavaScript, add continous falling gold and rocks from the top of the site."</li>
